--- a/hands-on-quick-start/2-github-api.ipynb
+++ b/hands-on-quick-start/2-github-api.ipynb
@@ -16,9 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb 셀 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bfriendly-giggle-7xxwrv79rrrhp56/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bfriendly-giggle-7xxwrv79rrrhp56/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch_user_repos\u001b[39m(name):\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bfriendly-giggle-7xxwrv79rrrhp56/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     url \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhttps://api.github.com/users/\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/repos?sort=pushed&direction=desc&type=owner\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(name)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "\n",
@@ -32,11 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fetch_user_repos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb 셀 4\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bfriendly-giggle-7xxwrv79rrrhp56/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m username \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mwhateveriiwant\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bfriendly-giggle-7xxwrv79rrrhp56/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# username = \"Azure\"\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bfriendly-giggle-7xxwrv79rrrhp56/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m result \u001b[39m=\u001b[39m fetch_user_repos(username)\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bfriendly-giggle-7xxwrv79rrrhp56/workspaces/markdown-badge-demo/hands-on-quick-start/2-github-api.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(result)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fetch_user_repos' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "username = \"깃허브 유저네임을 입력하세요\"\n",
+    "username = \"whateveriiwant\"\n",
     "# username = \"Azure\"\n",
     "\n",
     "result = fetch_user_repos(username)\n",
